--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Untitled Document</title>
+<link href="css/estilos.css" rel="stylesheet" type="text/css" >
 </head>
 
 <body>
+<h1>Hola curso git</h1>
+<p>esto es un parrafo de ejemplo</p>
+
 </body>
 </html>
